update swagger for user
