# cmd/docs/swagger.json
@@ -268,10 +268,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get a user by ID",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Get a user by userID from the token",
                 "produces": [
                     "application/json"
                 ],
@@ -284,18 +281,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.UserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.HTTPError"
                         }
                     },
                     "500": {
